--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@kinde-oss/react-native-sdk-0-5x",
+    "name": "@kinde-oss/react-native",
     "version": "1.1.1",
     "description": "Kinde React Native SDK for authentication",
     "license": "MIT",
